<resources>
    <string name="app_name">RecyclerDetail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="new_employee">New Employee</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="birth_year">BirthYear</string>
    <string name="phone">Phone</string>
    <string name="active">Active</string>
    <string name="old">Old</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="birth_day">birthday</string>
    <string name="defaultDate">01–01–2000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>