<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editEmployeesActivity.EditEmployeesActivity">


    <!-- INPUT FIELDS -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etName"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/etId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etId"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/id"
        app:layout_constraintBottom_toTopOf="@id/etBirthYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etBirthYear"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/birth_year"
        app:layout_constraintBottom_toTopOf="@id/etPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textBirthYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPhone"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        app:layout_constraintBottom_toTopOf="@id/genderRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBirthYear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- SWITCH + RADIO GROUP -->

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/activeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        app:layout_constraintBottom_toTopOf="@id/activeSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhone">

        <RadioButton
            android:id="@+id/radioBtnF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Female" />

        <RadioButton
            android:id="@+id/radioBtnM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Male" />
    </RadioGroup>

    <!-- FAB BUTTON -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDone"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/teal_200"
        android:src="@drawable/check_bold"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
